--- a/simple-editor/package.json
+++ b/simple-editor/package.json
@@ -11,9 +11,16 @@
   "dependencies": {
     "@clerk/nextjs": "^6.30.1",
     "@floating-ui/react": "^0.27.15",
+    "@liveblocks/client": "^2.12.2",
+    "@liveblocks/node": "^2.12.2",
+    "@liveblocks/react": "^2.12.2",
+    "@liveblocks/react-tiptap": "^2.12.2",
+    "@liveblocks/react-ui": "^2.12.2",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
+    "@tiptap/extension-collaboration": "^2.26.1",
+    "@tiptap/extension-collaboration-cursor": "^2.26.1",
     "@tiptap/extension-details": "^3.2.0",
     "@tiptap/extension-highlight": "^3.0.9",
     "@tiptap/extension-horizontal-rule": "^3.0.9",
@@ -36,7 +43,8 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hotkeys-hook": "^5.1.0"
+    "react-hotkeys-hook": "^5.1.0",
+    "y-protocols": "^1.0.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
