--- a/simple-editor/package.json
+++ b/simple-editor/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "npx prisma generate",
+    "deploy": "npx prisma migrate deploy",
+    "vercel-build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.1",
