--- a/simple-editor/package.json
+++ b/simple-editor/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "deploy": "npx prisma migrate deploy",
-    "vercel-build": "npx prisma generate && npx prisma migrate deploy && next build"
+    "postinstall": "npx prisma generate",
+    "vercel-build": "npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.1",
