--- a/simple-editor/vercel.json
+++ b/simple-editor/vercel.json
@@ -1,13 +1,10 @@
 {
+  "installCommand": "npm install",
   "buildCommand": "npm run vercel-build",
-  "installCommand": "npm install --legacy-peer-deps",
   "framework": "nextjs",
   "functions": {
     "app/api/**/*.js": {
-      "maxDuration": 30
+      "maxDuration": 60
     }
-  },
-  "env": {
-    "SKIP_ENV_VALIDATION": "1"
   }
 }
