--- a/invoice-generator/package.json
+++ b/invoice-generator/package.json
@@ -28,6 +28,7 @@
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
