--- a/for-pappa-next/package.json
+++ b/for-pappa-next/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.10",
+    "@sparticuz/chromium": "^131.0.0",
     "axios": "^1.11.0",
     "cloudinary": "^2.7.0",
     "mongoose": "^8.7.1",
     "fs": "^0.0.1-security",
     "next": "15.5.2",
     "path": "^0.12.7",
-    "puppeteer": "^24.19.0",
+    "puppeteer-core": "^24.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "stream": "^0.0.3",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "puppeteer": "^24.19.0",
     "@types/react": "19.1.12",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
