--- a/for-pappa-next/vercel.json
+++ b/for-pappa-next/vercel.json
@@ -1,7 +1,6 @@
 {
     "functions": {
-      "app/api/**/*": {
-        "runtime": "nodejs20.x"
-      }
+      "app/api/**/route.js": { "runtime": "nodejs20.x" },
+      "app/api/**/route.ts": { "runtime": "nodejs20.x" }
     }
   }
